src/bootstrap/test/v0_13/rejects/03_interpolation_wrong_type_macos/main.zg
# requires: v0.13
n := 5
asm {
	mov x0, ${n}
	svc #0x80
}
